# test-package

./: setup.cfg
