[metadata]
name = somepackage
version = 1.0
author = Doug Somewhere
author-email = test@none.com
home-page = https://github.com/blarg
description = asdf
long-description = file: README.md
long_description_content_type = text/markdown
license = MIT
license-file = COPYING
platform = any
keywords = {keywords}
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Bug Tracker = https://github.com/althonos/{name}/issues
    Changelog = https://github.com/althonos/{name}/blob/master/CHANGELOG.md

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.8.*
packages = somepackage
test_suite = tests
setup_requires =
    setuptools
    # setuptools >=30.3.0     # minimal version for `setup.cfg`
    # setuptools >=38.3.0     # version with most `setup.cfg` bugfixes
install_requires =
    requests
tests_require =
    requests

